# python_avr

./: .gitignore  README.md  pyproject.toml  setup.py
src/: avr_headers.h  avrcmodule.c
src/avr/: avrcmodule.c
tests/: test_avr.py
